app/templates/mirroring-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: name
spec:
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  host: host
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
