app/templates/traffic-shifting-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: host
spec:
  hosts:
    - host
  http:
    - route:
        - destination:
            host: host
            subset: v1
          weight: 90
        - destination:
            host: host
            subset: v2
          weight: 10
